# openai-trans-voice

./: .gitignore  pyproject.toml
trans_voice/: __main__.py  api.py  model.py
